// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Server-level impersonation - authorization denials (integration) rejects a non-admin with only the workspace impersonate permission from impersonating across workspaces 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "FORBIDDEN_EXCEPTION",
    "userFriendlyMessage": "Server-level impersonation is not enabled for this user or workspace.",
  },
  "message": "Server level impersonation not allowed",
  "name": "ForbiddenError",
}
`;

exports[`Server-level impersonation - authorization denials (integration) rejects cross-workspace impersonation when the impersonator has no verified 2FA 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "TWO_FACTOR_AUTHENTICATION_PROVISION_REQUIRED",
    "userFriendlyMessage": "Set up two-factor authentication before impersonating users in another workspace.",
  },
  "message": "Two-factor authentication is required for server-level impersonation. Please enable 2FA in your workspace settings before attempting to impersonate users.",
  "name": "ForbiddenError",
}
`;
